--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.1.0",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
     "vue": "^3.4.15",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
