--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "spatie/laravel-sluggable": "^3.5",
         "symfony/http-client": "^7.0",
         "symfony/mailgun-mailer": "^7.0"
     },
