--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.7",
         "autoprefixer": "^10.4.17",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
@@ -14,6 +16,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@alpinejs/collapse": "^3.13.5",
+        "alpinejs": "^3.13.5",
         "bootstrap-icons": "^1.11.3"
     }
 }
