--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,13 @@
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "sortablejs": "^1.15.2",
+    "sortablejs-vue3": "^1.2.11",
+    "uuid": "^9.0.1",
     "vue": "^3.4.15",
     "vue-chartjs": "^5.3.0",
     "vue-router": "^4.0.13",
+    "vue3-treeselect": "^0.1.10",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
